# ciil-emg-vr

./: .gitignore  Dockerfile  LICENSE  README.md  build-docker.sh  heic2rmbg.sh  pyproject.toml  requirements.txt  start-docker-it.sh
Unity/: .gitattributes  .gitignore  README.md
dinov2/: depth_map.py
embc2025/: main.py  pre_post_figures.py
experiment/: adapt_manager.py  analysis.py  analysis_figures.py  config.py  familiarization.py  game.py  main.py  memory.py  memory_manager.py  pre_post_figures.py  results.py  super_classi.py
move_group_python/: cartesian_publisher.py  cartesian_subscriber.py  gripper_mvp.py  gripper_pose_publisher.py  gripper_pose_subscriber.py  int_publisher.py  int_subscriber.py  pose_publisher.py  pose_publisher_udp.py  pose_subscriber.py  ur5e_control_example
nfc/: globals.py  models.py  offline_main_cnn.py  offline_main_scnn.py  online_main.py  online_main_cnn.py  online_main_scnn.py  sim_label_generator.py  utils.py
nfc_emg/: datasets.py  imu.py  models.py  paths.py  schemas.py  sensors.py  utils.py
scripts/: configs.py  live_labeler.py  main.py  offline_main.py  offline_main_cnn.py  offline_main_libemg.py  offline_main_lstm.py  offline_main_mlp.py  offline_main_scnn.py  offline_main_sk.py  offline_main_wrist.py  online_main.py  online_main_scnn.py  online_main_ur.py  online_main_vr.py  online_main_vr_nn_no_adap.py  online_main_vr_scnn.py  online_main_vr_scnn_no_adap.py  sim_label_generator.py  sim_preds_consumer.py  sim_unity.py  test.py
src/: globals.py  initial_training.py  models.py  offline_main.py  online_main.py  test.py  udp_client.py  udp_server.py  (+1 more)
(+377 files in other folders)
